unpackaged/main/default/objects/Product2/fields/ExtSupplier__c.field-meta.xml
<CustomField>
    <fullName>ExtSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This product is provided by an external supplier (for Visit/Poken)</description>
    <inlineHelpText>This product is provided by an external supplier (for Visit/Poken)</inlineHelpText>
    <label>Ext. Supplier</label>
    <type>Checkbox</type>
</CustomField>