unpackaged/main/default/objects/Product2/fields/Sendable__c.field-meta.xml
<CustomField>
    <fullName>Sendable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sendable</label>
    <type>Checkbox</type>
</CustomField>