unpackaged/main/default/objects/Product2/fields/Visit_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Visit External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>