unpackaged/main/default/objects/Product2/fields/Weight_Lb__c.field-meta.xml
<CustomField>
    <fullName>Weight_Lb__c</fullName>
    <label>Weight (Lb)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>