unpackaged/main/default/objects/Product2/listViews/Poken_Visit.listView-meta.xml
<ListView>
    <fullName>Poken_Visit</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Sendable__c</columns>
    <columns>Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <label>Poken-Visit</label>
    <language>en_US</language>
</ListView>